[tool.poetry]
name = "workshop"
version = "0.1.0"
description = ""
authors = ["jorgebarcelos <jorgebarcelos.faria@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pretty-errors = "^1.2.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
